--- a/src/EShop.Presentation/EShop.WebApp/Pages/User/Register.razor
+++ b/src/EShop.Presentation/EShop.WebApp/Pages/User/Register.razor
@@ -50,6 +50,10 @@
             Are you member?
             <a href="/sign-in" class="text-indigo-600 font-semibold leading-6 hover:text-indigo-500">Sign In</a>
         </p>
+        
+        <p class="mt-10 text-gray-500 text-center text-sm">
+            <a href="/" class="text-indigo-600 font-semibold leading-6 hover:text-indigo-500">Back to home page</a>
+        </p>
     </div>
 </div>
 
