--- a/src/EShop.Presentation/EShop.WebApp/Pages/Product/Detail.razor
+++ b/src/EShop.Presentation/EShop.WebApp/Pages/Product/Detail.razor
@@ -11,10 +11,10 @@
     <div class="px-4 mx-auto max-w-screen-xl 2xl:px-0">
         <div class="lg:grid lg:grid-cols-2 lg:gap-8 xl:gap-16">
             <div class="mx-auto max-w-md shrink-0 lg:max-w-lg">
-                <img class="w-full dark:hidden" src="@_productInfo.PictureFileName"
+                <img class="w-full dark:hidden" src="@_productInfo.ImageUrl"
                      alt="" />
                 <img class="hidden w-full dark:block"
-                     src="@_productInfo.PictureFileName" alt="" />
+                     src="@_productInfo.ImageUrl" alt="" />
             </div>
 
             <div class="mt-6 sm:mt-8 lg:mt-0">
@@ -27,13 +27,13 @@
                     </p>
 
                     <div class="gap-2 mt-2 flex items-center sm:mt-0">
-                        <Rating Max="5" ValueStar="4"></Rating>
+                        <Rating Max="5" ValueStar="Convert.ToInt32(_productInfo.Star)"></Rating>
                         <p class="text-gray-500 text-sm font-medium leading-none dark:text-gray-400">
-                            (@_productInfo.AvgStarPoint.ToString("F1"))
+                            (@_productInfo.Star.ToString("F1"))
                         </p>
                         <a href="#"
                            class="text-gray-900 text-sm font-medium leading-none underline hover:no-underline dark:text-white">
-                            @_productInfo.CountReview Reviews
+                            @_productInfo.ReviewsCount Reviews
                         </a>
                     </div>
                 </div>
@@ -195,7 +195,7 @@
     </div>
 </section>
 
-<ProductReview />s
+<ProductReview />
 
 @code {
     [Parameter]
@@ -206,10 +206,10 @@
     protected override async Task OnInitializedAsync()
     {
         _productInfo = new()
-        {
-            Brand = new(),
-            Category = new(),
-        };
+            {
+                Brand = new(),
+                Category = new(),
+            };
         var resultObject = await CatalogService.GetProductById(ProductId);
         _productInfo = resultObject.Data;
     }
