--- a/src/EShop.Presentation/EShop.WebApp/Pages/User/ResetPassword.razor
+++ b/src/EShop.Presentation/EShop.WebApp/Pages/User/ResetPassword.razor
@@ -52,6 +52,10 @@
             </div>
         </EditForm>
     </div>
+    
+    <p class="mt-10 text-gray-500 text-center text-sm">
+        <a href="/" class="text-indigo-600 font-semibold leading-6 hover:text-indigo-500">Back to home page</a>
+    </p>
 </div>
 
 @code
