--- a/src/EShop.Presentation/EShop.WebApp/Pages/User/SignIn.razor
+++ b/src/EShop.Presentation/EShop.WebApp/Pages/User/SignIn.razor
@@ -60,6 +60,10 @@
             Not a member?
             <a href="/register" class="text-indigo-600 font-semibold leading-6 hover:text-indigo-500">Register</a>
         </p>
+        
+        <p class="mt-10 text-gray-500 text-center text-sm">
+            <a href="/" class="text-indigo-600 font-semibold leading-6 hover:text-indigo-500">Back to home page</a>
+        </p>
     </div>
 </div>
 
