--- a/src/EShop.Presentation/EShop.WebApp/Components/Common/Promotional.razor
+++ b/src/EShop.Presentation/EShop.WebApp/Components/Common/Promotional.razor
@@ -12,7 +12,7 @@
                 of a new iMac computer.
             </h1>
             <p class="mb-6 text-gray-500 dark:text-gray-400">Reserve your new Apple iMac 27” today and enjoy exclusive savings with qualified activation. Pre-order now to secure your discount.</p>
-            <a href="#" class="bg-primary-700 px-5 py-3 text-white inline-flex items-center justify-center rounded-lg text-center text-base font-medium hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 dark:focus:ring-primary-900"> Pre-order now </a>
+            <a href="#" class="bg-blue-700 px-5 py-3 text-white inline-flex items-center justify-center rounded-lg text-center text-base font-medium hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 dark:focus:ring-primary-900"> Pre-order now </a>
         </div>
     </div>
 </section>
