--- a/src/EShop.Presentation/EShop.WebApp/Pages/Order/Payment.razor
+++ b/src/EShop.Presentation/EShop.WebApp/Pages/Order/Payment.razor
@@ -48,7 +48,7 @@
                         </div>
                     </div>
 
-                    <button type="submit" class="bg-primary-700 px-5 py-2.5 text-white flex w-full items-center justify-center rounded-lg text-sm font-medium hover:bg-primary-800 focus:outline-none focus:ring-4 focus:ring-primary-300 dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">Pay now</button>
+                    <button type="submit" class="bg-blue-700 px-5 py-2.5 text-white flex w-full items-center justify-center rounded-lg text-sm font-medium hover:bg-primary-800 focus:outline-none focus:ring-4 focus:ring-primary-300 dark:bg-primary-600 dark:hover:bg-blue-700 dark:focus:ring-primary-800">Pay now</button>
                 </form>
 
                 <div class="mt-6 grow sm:mt-8 lg:mt-0">
