--- a/src/EShop.Presentation/EShop.WebApp/Pages/Product/Detail.razor
+++ b/src/EShop.Presentation/EShop.WebApp/Pages/Product/Detail.razor
@@ -4,6 +4,7 @@
 @using EShop.WebApp.Components.Product
 @using EShop.WebApp.Services.CatalogService
 @using EShop.WebApp.Components.Common
+@using EShop.WebApp.Services.CatalogService
 
 @inject ICatalogService CatalogService
 
