--- a/src/EShop.Presentation/EShop.WebApp/Pages/Product/Warranty.razor
+++ b/src/EShop.Presentation/EShop.WebApp/Pages/Product/Warranty.razor
@@ -10,7 +10,7 @@
                 <div class="mt-6 space-x-4 flex items-center sm:mt-0">
                     <div>
                         <label for="warranty-status" class="mb-2 text-gray-900 sr-only block text-sm font-medium dark:text-white">Warranty status</label>
-                        <select id="warranty-status" class="min-w-[8rem] border-gray-300 bg-gray-50 p-2.5 text-gray-900 block w-full rounded-lg border text-sm focus:border-primary-500 focus:ring-primary-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder:text-gray-400 dark:focus:border-primary-500 dark:focus:ring-primary-500">
+                        <select id="warranty-status" class="border-gray-300 bg-gray-50 p-2.5 text-gray-900 block w-full min-w-[8rem] rounded-lg border text-sm focus:border-primary-500 focus:ring-primary-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder:text-gray-400 dark:focus:border-primary-500 dark:focus:ring-primary-500">
                             <option selected>All</option>
                             <option value="pending">Pending</option>
                             <option value="active">Active</option>
@@ -20,7 +20,7 @@
                     <span class="text-gray-500 inline-block dark:text-gray-400"> from </span>
                     <div>
                         <label for="warranty-length" class="mb-2 text-gray-900 sr-only block text-sm font-medium dark:text-white">Select warranty length</label>
-                        <select id="warranty-length" class="min-w-[10rem] border-gray-300 bg-gray-50 p-2.5 text-gray-900 block w-full rounded-lg border text-sm focus:border-primary-500 focus:ring-primary-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder:text-gray-400 dark:focus:border-primary-500 dark:focus:ring-primary-500">
+                        <select id="warranty-length" class="border-gray-300 bg-gray-50 p-2.5 text-gray-900 block w-full min-w-[10rem] rounded-lg border text-sm focus:border-primary-500 focus:ring-primary-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder:text-gray-400 dark:focus:border-primary-500 dark:focus:ring-primary-500">
                             <option selected>Warranty length</option>
                             <option value="12">12 months</option>
                             <option value="24">24 months</option>
