--- a/src/EShop.Presentation/EShop.WebApp/Components/Product/ProductReview.razor
+++ b/src/EShop.Presentation/EShop.WebApp/Components/Product/ProductReview.razor
@@ -38,7 +38,7 @@
             <div class="space-y-4 shrink-0">
                 <p class="text-gray-900 text-2xl font-semibold leading-none dark:text-white">4.65 out of 5</p>
                 <button type="button" data-modal-target="review-modal" data-modal-toggle="review-modal"
-                        class="mb-2 me-2 bg-primary-700 px-5 py-2.5 text-white rounded-lg text-sm font-medium hover:bg-primary-800 focus:outline-none focus:ring-4 focus:ring-primary-300 dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">
+                        class="mb-2 me-2 bg-blue-700 px-5 py-2.5 text-white rounded-lg text-sm font-medium hover:bg-primary-800 focus:outline-none focus:ring-4 focus:ring-primary-300 dark:bg-primary-600 dark:hover:bg-blue-700 dark:focus:ring-primary-800">
                     Write
                     a review
                 </button>
@@ -644,7 +644,7 @@
                 </div>
                 <div class="border-gray-200 pt-4 border-t dark:border-gray-700 md:pt-5">
                     <button type="submit"
-                            class="me-2 bg-primary-700 px-5 py-2.5 text-white inline-flex items-center rounded-lg text-center text-sm font-medium hover:bg-primary-800 focus:outline-none focus:ring-4 focus:ring-primary-300 dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">
+                            class="me-2 bg-blue-700 px-5 py-2.5 text-white inline-flex items-center rounded-lg text-center text-sm font-medium hover:bg-primary-800 focus:outline-none focus:ring-4 focus:ring-primary-300 dark:bg-primary-600 dark:hover:bg-blue-700 dark:focus:ring-primary-800">
                         Add
                         review
                     </button>
