--- a/src/EShop.Presentation/EShop.WebApp/Layout/Mainlayout/Footer.razor
+++ b/src/EShop.Presentation/EShop.WebApp/Layout/Mainlayout/Footer.razor
@@ -84,7 +84,7 @@
                                     <input class="border-gray-300 bg-white p-3 text-gray-900 block w-full rounded-lg border text-sm focus:border-primary-500 focus:ring-primary-500 dark:border-gray-500 dark:bg-gray-600 dark:text-white dark:placeholder-gray-400 sm:w-96 lg:w-full dark:focus:border-primary-500 dark:focus:ring-primary-500" placeholder="Enter your email address" type="email" id="email" required="" />
                                 </div>
                                 <div>
-                                    <button type="submit" class="bg-primary-700 px-5 py-3 text-white w-full cursor-pointer rounded-lg text-center text-sm font-medium hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">Subscribe</button>
+                                    <button type="submit" class="bg-blue-700 px-5 py-3 text-white w-full cursor-pointer rounded-lg text-center text-sm font-medium hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 dark:bg-primary-600 dark:hover:bg-blue-700 dark:focus:ring-primary-800">Subscribe</button>
                                 </div>
                             </div>
                         </form>
