--- a/src/EShop.Presentation/EShop.WebApp/Pages/Order/Confirmation.razor
+++ b/src/EShop.Presentation/EShop.WebApp/Pages/Order/Confirmation.razor
@@ -27,7 +27,7 @@
             </dl>
         </div>
         <div class="space-x-4 flex items-center">
-            <a href="#" class="text-white bg-primary-700 px-5 py-2.5 rounded-lg text-sm font-medium hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 focus:outline-none dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">Track your order</a>
+            <a href="#" class="text-white bg-blue-700 px-5 py-2.5 rounded-lg text-sm font-medium hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 focus:outline-none dark:bg-primary-600 dark:hover:bg-blue-700 dark:focus:ring-primary-800">Track your order</a>
             <a href="#" class="py-2.5 px-5 text-gray-900 bg-white border-gray-200 rounded-lg border text-sm font-medium hover:bg-gray-100 hover:text-primary-700 focus:outline-none focus:z-10 focus:ring-4 focus:ring-gray-100 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:focus:ring-gray-700 dark:hover:text-white dark:hover:bg-gray-700">Return to shopping</a>
         </div>
     </div>
