--- a/src/EShop.Presentation/EShop.WebApp/Pages/Order/Summary.razor
+++ b/src/EShop.Presentation/EShop.WebApp/Pages/Order/Summary.razor
@@ -72,7 +72,7 @@
                             to Shopping</button>
 
                         <button type="submit"
-                            class="mt-4 bg-primary-700 px-5 py-2.5 text-white flex w-full items-center justify-center rounded-lg text-sm font-medium hover:bg-primary-800 focus:outline-none focus:ring-4 focus:ring-primary-300 dark:bg-primary-600 sm:mt-0 dark:hover:bg-primary-700 dark:focus:ring-primary-800">Send
+                            class="mt-4 bg-blue-700 px-5 py-2.5 text-white flex w-full items-center justify-center rounded-lg text-sm font-medium hover:bg-primary-800 focus:outline-none focus:ring-4 focus:ring-primary-300 dark:bg-primary-600 sm:mt-0 dark:hover:bg-blue-700 dark:focus:ring-primary-800">Send
                             the order</button>
                     </div>
                 </div>
@@ -547,7 +547,7 @@
                 </div>
                 <div class="border-gray-200 pt-4 border-t dark:border-gray-700 md:pt-5">
                     <button type="submit"
-                        class="me-2 bg-primary-700 px-5 py-2.5 text-white inline-flex items-center rounded-lg text-center text-sm font-medium hover:bg-primary-800 focus:outline-none focus:ring-4 focus:ring-primary-300 dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">Save
+                        class="me-2 bg-blue-700 px-5 py-2.5 text-white inline-flex items-center rounded-lg text-center text-sm font-medium hover:bg-primary-800 focus:outline-none focus:ring-4 focus:ring-primary-300 dark:bg-primary-600 dark:hover:bg-blue-700 dark:focus:ring-primary-800">Save
                         information</button>
                     <button type="button" data-modal-toggle="billingInformationModal"
                         class="me-2 border-gray-200 bg-white px-5 py-2.5 text-gray-900 rounded-lg border text-sm font-medium hover:bg-gray-100 hover:text-primary-700 focus:z-10 focus:outline-none focus:ring-4 focus:ring-gray-100 dark:border-gray-600 dark:bg-gray-800 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white dark:focus:ring-gray-700">Cancel</button>
