--- a/src/EShop.Presentation/EShop.WebApp/Pages/Order/Tracking.razor
+++ b/src/EShop.Presentation/EShop.WebApp/Pages/Order/Tracking.razor
@@ -118,7 +118,7 @@
                     <div class="gap-4 sm:flex sm:items-center">
                         <button type="button" class="border-gray-200 bg-white px-5 py-2.5 text-gray-900 w-full rounded-lg border text-sm font-medium hover:bg-gray-100 hover:text-primary-700 focus:z-10 focus:outline-none focus:ring-4 focus:ring-gray-100 dark:border-gray-600 dark:bg-gray-800 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white dark:focus:ring-gray-700">Cancel the order</button>
 
-                        <a href="#" class="mt-4 bg-primary-700 px-5 py-2.5 text-white flex w-full items-center justify-center rounded-lg text-sm font-medium hover:bg-primary-800 focus:outline-none focus:ring-4 focus:ring-primary-300 dark:bg-primary-600 sm:mt-0 dark:hover:bg-primary-700 dark:focus:ring-primary-800">Order details</a>
+                        <a href="#" class="mt-4 bg-blue-700 px-5 py-2.5 text-white flex w-full items-center justify-center rounded-lg text-sm font-medium hover:bg-primary-800 focus:outline-none focus:ring-4 focus:ring-primary-300 dark:bg-primary-600 sm:mt-0 dark:hover:bg-blue-700 dark:focus:ring-primary-800">Order details</a>
                     </div>
                 </div>
             </div>
