--- a/src/EShop.Presentation/EShop.WebApp/Layout/Mainlayout/NavMenu.razor
+++ b/src/EShop.Presentation/EShop.WebApp/Layout/Mainlayout/NavMenu.razor
@@ -29,27 +29,24 @@
                             Best Sellers
                         </a>
                     </li>
-                    <li class="shrink-0">
-                        <a href="#" title="" class="text-gray-900 flex text-sm font-medium hover:text-primary-700 dark:text-white dark:hover:text-primary-500">
-                            Gift Ideas
-                        </a>
-                    </li>
-                    <li class="shrink-0">
-                        <a href="#" title="" class="text-gray-900 text-sm font-medium hover:text-primary-700 dark:text-white dark:hover:text-primary-500">
-                            Today's Deals
-                        </a>
-                    </li>
-                    <li class="shrink-0">
-                        <a href="#" title="" class="text-gray-900 text-sm font-medium hover:text-primary-700 dark:text-white dark:hover:text-primary-500">
-                            Sell
-                        </a>
-                    </li>
                 </ul>
             </div>
 
+            <div class="flex w-1/4 items-center lg:space-x-2">
+                <form class="mx-auto flex w-full items-center">
+                    <div class="relative w-full">
+                        <input type="text" class="bg-gray-50 border-gray-300 text-gray-900 p-2.5 block w-full rounded-lg border text-sm focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Search" required />
+                        <button type="button" class="inset-y-0 end-0 pe-3 absolute flex items-center">
+                            <svg class="w-4 h-4 me-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
+                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z" />
+                            </svg>
+                        </button>
+                    </div>
+                </form>
+
+            </div>
+
             <div class="flex items-center lg:space-x-2">
-
-
                 <AuthorizeView>
                     <Authorized>
                         <a href="/cart"
