feat: add option product tables

--- a/src/EShop.Presentation/EShop.WebApp/Pages/Product/Detail.razor
+++ b/src/EShop.Presentation/EShop.WebApp/Pages/Product/Detail.razor
@@ -1,4 +1,4 @@
-﻿@page "/detail/{ProductId:int}"
+﻿@page "/products/{ProductId:int}"
 
 @using EShop.Shared.ResponseModels.Catalog
 @using EShop.WebApp.Components.Product
