--- a/src/EShop.Presentation/EShop.WebApp/Components/Product/ProductCart.razor
+++ b/src/EShop.Presentation/EShop.WebApp/Components/Product/ProductCart.razor
@@ -3,7 +3,7 @@
 
 <div class="border-gray-200 bg-white p-6 flex flex-col justify-around rounded-lg border shadow-sm dark:border-gray-700 dark:bg-gray-800">
     <div class="h-56 w-full">
-        <a href="@($"/detail/{ProductData.Id}")">
+        <a href="@($"/products/{ProductData.Id}")">
             <img class="mx-auto h-full dark:hidden"
                  src="@ProductData.ImageUrl" alt="" />
             <img class="mx-auto hidden h-full dark:block"
@@ -17,7 +17,7 @@
             </span>
 
             <div class="gap-1 flex items-center justify-end">
-                <button type="button" data-tooltip-target="tooltip-quick-look"
+                <button  type="button" data-tooltip-target="tooltip-quick-look"
                         class="p-2 text-gray-500 rounded-lg hover:bg-gray-100 hover:text-gray-900 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">
                     <span class="sr-only"> Quick look </span>
                     <svg class="h-5 w-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
@@ -30,7 +30,7 @@
                 <div id="tooltip-quick-look" role="tooltip"
                      class="tooltip bg-gray-900 px-3 py-2 text-white invisible absolute z-10 inline-block rounded-lg text-sm font-medium opacity-0 shadow-sm transition-opacity duration-300 dark:bg-gray-700"
                      data-popper-placement="top">
-                    Quick look
+                    <ProductQuickview></ProductQuickview>
                     <div class="tooltip-arrow" data-popper-arrow=""></div>
                 </div>
 
