--- a/src/EShop.Presentation/EShop.WebApp/Components/Product/ProductReviewSection.razor
+++ b/src/EShop.Presentation/EShop.WebApp/Components/Product/ProductReviewSection.razor
@@ -407,7 +407,7 @@
                 <div class="mt-4 min-w-0 space-y-4 flex-1 sm:mt-0">
                     <p class="text-gray-500 text-base font-normal dark:text-gray-400">
                         I have used earlier Mac computers
-                        in my university work for a number of years and found them easy to use.The iMac 2021 is no
+                        in my university work for a topNumber of years and found them easy to use.The iMac 2021 is no
                         exception. It works straight out of the box giving superb definition from the HD screen.
                     </p>
                     <p class="text-gray-500 text-base font-normal dark:text-gray-400">
