--- a/src/EShop.Presentation/EShop.WebApp/Pages/Order/Payment.razor
+++ b/src/EShop.Presentation/EShop.WebApp/Pages/Order/Payment.razor
@@ -14,7 +14,7 @@
                         </div>
 
                         <div class="col-span-2 sm:col-span-1">
-                            <label for="card-number-input" class="mb-2 text-gray-900 block text-sm font-medium dark:text-white"> Card number* </label>
+                            <label for="card-topNumber-input" class="mb-2 text-gray-900 block text-sm font-medium dark:text-white"> Card topNumber* </label>
                             <input type="text" id="card-number-input" class="border-gray-300 bg-gray-50 p-2.5 pe-10 text-gray-900 block w-full rounded-lg border text-sm focus:border-primary-500 focus:ring-primary-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder:text-gray-400 dark:focus:border-primary-500 dark:focus:ring-primary-500" placeholder="xxxx-xxxx-xxxx-xxxx" pattern="^4[0-9]{12}(?:[0-9]{3})?$" required />
                         </div>
 
