--- a/src/EShop.Presentation/EShop.WebApp/Pages/Order/Summary.razor
+++ b/src/EShop.Presentation/EShop.WebApp/Pages/Order/Summary.razor
@@ -127,8 +127,8 @@
                         </div>
 
                         <div>
-                            <label for="vat_number"
-                                class="mb-2 text-gray-900 block text-sm font-medium dark:text-white"> VAT number
+                            <label for="vat_topNumber"
+                                class="mb-2 text-gray-900 block text-sm font-medium dark:text-white"> VAT topNumber
                             </label>
                             <input type="text" id="vat_number"
                                 class="border-gray-300 bg-gray-50 p-2.5 text-gray-900 block w-full rounded-lg border text-sm focus:border-primary-500 focus:ring-primary-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder:text-gray-400 dark:focus:border-primary-500 dark:focus:ring-primary-500"
